k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt-front
  namespace: the-tip-top-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nuxt-front
  template:
    metadata:
      labels:
        app: nuxt-front
    spec:
      containers:
        - name: web
          image: joanisky/the-tip-top-front:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
