k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-front-service
spec:
  selector:
    app: nuxt-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
